# agent-planning-patent

./: .gitignore  Readme.md  Task_current.md  compile_result.py  design.md  extract_json.py  pyproject.toml  setup_data.py
archive/: crew_backup.py  tasks_nlp_old.yaml
docs/: How_to.md  ROADMAP.md
output/computer_science/: computer_science_output.jsonl
output/computer_science/0/: US-11880929-B2_output.json  US-11880929-B2_output_short.json  US-12025809-B1_output.json  US-12025809-B1_output_short.json  US-2024069723-A1_output.json  US-2024069723-A1_output_short.json  US-2024126837-A1_output.json  US-2024126837-A1_output_short.json  US-2024143670-A1_output.json  US-2024143670-A1_output_short.json  US-2024152617-A1_output.json  US-2024152617-A1_output_short.json  (+8 more)
output/material_chemistry/: material_chemistry_output.jsonl
output/nlp/: US-10795922-B2_output.json  US-11222236-B2_output.json  US-11423042-B2_output.json  US-11423042-B2_output_test.json  US-11769011-B2_output.json  US-11842154-B2_output.json  US-2020073983-A1_output.json  US-2020125642-A1_output.json  US-2021286950-A1_output.json  US-2022139372-A1_output.json  US-2022309360-A1_output.json  US-2022366145-A1_output.json  US-2023274743-A1_output.json  nlp_output.jsonl
report/: Async_crew.md  design_3by3.md  eval.md  patent_to_product.md
src/patent_crew/: async_main.py  crew.py  crew_backup.py  crew_rewrite.py  main.py  test_async_main.py
tests/: multi_image_analysis_crew.py  test_comprehensive_analyst_agent.py  test_multimodal_true_agent.py  test_vision_tool_agent.py  vision_crew_test.py
(+241 files in other folders)
